      required by the java plugin.
  * New debconf template translations:
    - cs.po, thanks to Martin Sin (Closes: #534206).
    - ru.po, thanks to Yuri Kozlov (Closes: #539467).
  * debian/control, debian/rules:
    - No not limit the libvirt plugin to amd64, i386, powerpc - libvirt-dev
      seems to be available on all architectures now.
  * debian/collectd.conf:
    - Set the 'apache' plugin's URL according to the default used by Debian's
      Apache; thanks to Joey Hess for reporting this (Closes: #541888).
  * debian/libcollectdclient-dev.install, debian/rules:
    - Do not install libcollectdclient's .la file in favor of the Squeeze
      release goal to remove those files (for details see
      <http://lists.debian.org/debian-devel/2009/08/msg00783.html>).

 -- Sebastian Harl <tokkee@debian.org>  Sat, 29 Aug 2009 09:42:52 +0200

collectd (4.6.3-1) unstable; urgency=low

  * New upstream release.
  * debian/patches:
    - Removed battery_acpi_complain.dpatch - included upstream.
    - Removed include_empty_files.dpatch - included upstream.
    - Removed ntpd_type_pun_fix.dpatch - included upstream.
    - Removed rrdtool_uninitialized_fix.dpatch - included upstream.
    - Added libcollectdclient_static_sstrerror.dpatch to make a private
      function in libcollectdclient static.
  * debian/rules:
    - Install collectd-network.py to /usr/share/doc/collectd/examples/.

 -- Sebastian Harl <tokkee@debian.org>  Tue, 02 Jun 2009 22:03:10 +0200

collectd (4.6.2-3) unstable; urgency=low

  * debian/patches:
    - Actually enabled rrdtool_uninitialized_fix.dpatch - d'oh!

 -- Sebastian Harl <tokkee@debian.org>  Fri, 29 May 2009 15:49:46 +0200

collectd (4.6.2-2) unstable; urgency=low

  * debian/patches:
    - Added battery_acpi_complain.dpatch - upstream patch to fix excessive
      error messages in the battery plugin in case /proc/acpi/battery is not
      available.
    - Added ntpd_type_pun_fix.dpatch - upstream patch to fix dereferencing of