@@ -78,6 +78,14 @@ endif
 
 config.status: configure $(DPATCH_STAMPFN)
 	dh_testdir
+	
+	# This is a work-around for #474087 (broken openipmi .pc files).
+	mkdir debian/pkgconfig
+	sed -re 's/^(Requires:.*) pthread(.*)$$/\1\2/' \
+		/usr/lib/pkgconfig/OpenIPMIpthread.pc \
+		> debian/pkgconfig/OpenIPMIpthread.pc
+	
+	PKG_CONFIG_PATH="$(CURDIR)/debian/pkgconfig:$$PKG_CONFIG_PATH" \
 	./configure $(confflags) CPPFLAGS="$(CPPFLAGS)" CFLAGS="$(CFLAGS)" \
 		JAVAC="$(JAVAC)" JAVA_CPPFLAGS="$(JAVA_CPPFLAGS)" \
 		JAVA_LDFLAGS="$(JAVA_LDFLAGS)"
@@ -101,6 +109,8 @@ clean: unpatch
 	
 	rm -f debian/README.Debian.plugins
 	rm -f src/*.1 src/*.5
+	
+	rm -rf debian/pkgconfig
 	
 	dh_clean
 	debconf-updatepo
