@@ -66,6 +66,10 @@ collectd (4.7.2-1) unstable; urgency=low
   * debian/control, debian/rules:
     - No not limit the libvirt plugin to amd64, i386, powerpc - libvirt-dev
       seems to be available on all architectures now.
+    - Reintroduced a work around for #474087 (broken openipmi .pc files) by
+      providing a fixed version of OpenIPMIpthread.pc in debian/pkgconfig and
+      adding that path to PKG_CONFIG_PATH. Removed the version from the
+      libopenipmi-dev build dependency for now.
   * debian/collectd.conf:
     - Set the 'apache' plugin's URL according to the default used by Debian's
       Apache; thanks to Joey Hess for reporting this (Closes: #541888).
@@ -74,7 +78,7 @@ collectd (4.7.2-1) unstable; urgency=low
       release goal to remove those files (for details see
       <http://lists.debian.org/debian-devel/2009/08/msg00783.html>).
 
- -- Sebastian Harl <tokkee@debian.org>  Sat, 29 Aug 2009 09:42:52 +0200
+ -- Sebastian Harl <tokkee@debian.org>  Sat, 29 Aug 2009 12:25:40 +0200
 
 collectd (4.6.3-1) unstable; urgency=low
 
